--- a/SDTN_Networks.tex
+++ b/SDTN_Networks.tex
@@ -624,7 +624,8 @@ This use case has been tested using a single IP Controller and using the L2SM mo
     \item Site creation. The two sites must be created on the domain controller. Parameters such as site-id and location-id must be sent to uniquely identify the customer end-points.
     \item Bearer creation. The network side interface must be selected, so the ne-id and a port port-id must be provided.
     \item Service Creation. Virtual Circuit Identifier (VC-ID) to be negotiated by the ends is provided.  
-    \item Site Network Access Creation (SNA). In this step all the data previously created is merged together into a working L2VPN service to be deployed by the controller on the devices using NETCONF. The configuration parameters needed on the body request for the SNA creation include site-id, bearer-id and vpn-id, among others such as ip connectiviy, qos management, l2 encapsulation. 
+    \item Site Network Access Creation (SNA). In this step all the data previously created is merged together into a working L2VPN service to be deployed by the controller on the devices using NETCONF. 
+    The configuration parameters needed on the body request for the SNA creation includes \texttt{site-id}, \texttt{bearer-id} and \texttt{vpn-id}, among others such as ip connectiviy, qos management or ethernet encapsulation. 
 \end{enumerate}
 
 \begin{figure}
@@ -646,7 +647,7 @@ The workflow between the SDTN and the IP Controller has been summarized in the U
 \begin{figure}
 	\centering
 		\includegraphics[width=\linewidth]{figs/l2vpn_results.png}
-	\caption{L2VPN service creation results retrieved from the SDTN GUI. Information included three panes: Topology, Services lists and Service Details.}
+	\caption{L2VPN service creation results retrieved from the SDTN GUI. Information included three panes: Topology, Services lists and Service Details (Name, Topology and Endpoints).}
 	\label{FIG:L2SM_results}
 \end{figure}
 
@@ -690,7 +691,7 @@ The workflow between the SDTN and the IP Controller has been summarized in the U
 \begin{figure}
 	\centering
 		\includegraphics[width=\linewidth]{figs/l3vpn_results.png}
-	\caption{L3VPN service creation results retrieved from the SDTN GUI. Included two visualization panes: The hop-by-hop connection view or the geographical view.}
+	\caption{L3VPN service creation results retrieved from the SDTN GUI. Included three visualization panes: The serivce details (Name, Topology, RD and Endpoints), the geographical view and the hop-by-hop connection view.}
 	\label{FIG:l3vpn_results}
 \end{figure}
 
