Updates from Overleaf

--- a/SDTN_Networks.tex
+++ b/SDTN_Networks.tex
@@ -700,7 +700,7 @@ Once these sorts of restrictions were overcome, the procedure for creating the L
 \begin{figure}
 	\centering
 		\includegraphics[width=\linewidth]{figs/counters.png}
-	\caption{Traffic counters on the IP devices after the VPN service creation}
+	\caption{Traffic counters meassured on the end-points of the service. The utilization in both ends is close to 95\% due to the traffic injected by the generator.}
 	\label{FIG:counters}
 \end{figure}
 
