--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,86 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@manual{apistelefonica,
+	Author = "Telefonica SA",
+	Title = "APIS Telefonica",
+	Url = "https://apis.telefonica.com/",
+	Year = "2020 (accessed May 25, 2020)"}
+   
+@article{campbell1999survey,
+  title={A survey of programmable networks},
+  author={Campbell, Andrew T and De Meer, Herman G and Kounavis, Michael E and Miki, Kazuho and Vicente, John B and Villela, Daniel},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={29},
+  number={2},
+  pages={7--23},
+  year={1999},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{boucadair2014software,
+  title={Software-defined networking: A perspective from within a service provider environment},
+  author={Boucadair, Mohamed and Jacquenet, Christian},
+  booktitle={RFC 7149},
+  year={2014}
+}
+
+@book{claise2019network,
+  title={Network Programmability with YANG: The Structure of Network Automation with YANG, NETCONF, RESTCONF, and gNMI},
+  author={Claise, Benoit and Clarke, Joe and Lindblad, Jan},
+  year={2019},
+  publisher={Addison-Wesley Professional}
+}
+
+@article{sinha2017survey,
+	Author = {Sinha, Yash and Haribabu, K and others},
+	Date-Added = {2020-05-24 14:47:55 +0200},
+	Date-Modified = {2020-05-24 14:48:01 +0200},
+	Journal = {Journal of Network and Computer Applications},
+	Keywords = {hybrid sdn},
+	Pages = {35--55},
+	Publisher = {Elsevier},
+	Title = {A survey: hybrid SDN},
+	Volume = {100},
+	Year = {2017}}
+
+
+
+@article{karakus2017survey,
+	Author = {Karakus, Murat and Durresi, Arjan},
+	Date-Added = {2020-05-24 15:02:50 +0200},
+	Date-Modified = {2020-05-24 15:02:58 +0200},
+	Journal = {Computer Networks},
+	Keywords = {hybrid sdn},
+	Pages = {279--293},
+	Publisher = {Elsevier},
+	Title = {A survey: Control plane scalability issues and approaches in software-defined networking (SDN)},
+	Volume = {112},
+	Year = {2017}}
+
+
+
+@inproceedings{bakshi2013considerations,
+	Author = {Bakshi, Kapil},
+	Booktitle = {2013 IEEE Aerospace Conference},
+	Date-Added = {2020-05-24 15:08:49 +0200},
+	Date-Modified = {2020-05-24 15:08:59 +0200},
+	Keywords = {hybrid sdn},
+	Organization = {IEEE},
+	Pages = {1--9},
+	Title = {Considerations for software defined networking (SDN): Approaches and use cases},
+	Year = {2013}}
+
+
+@inproceedings{contreras2019ifusion,
+  title={iFUSION: Standards-based SDN Architecture for Carrier Transport Network},
+  author={Contreras, LM and Gonz{\'a}lez, {\'O} and L{\'o}pez, V and Fern{\'a}ndez-Palacios, JP and Folgueira, J},
+  booktitle={2019 IEEE Conference on Standards for Communications and Networking (CSCN)},
+  pages={1--7},
+  year={2019},
+  organization={IEEE}
+}
+
 
 @inproceedings{mittal2017cloud,
   title={Cloud Testing-The Future of Contemporary Software Testing},
@@ -502,15 +582,11 @@ The most common device used for amplification is an ErbiumDoped Fiber Amplifier 
 	Volume = {37},
 	Year = {2019}}
 
-@webpage{Openconfig,
-	Date-Added = {2020-01-02 10:46:24 -0500},
-	Date-Modified = {2020-01-02 10:47:03 -0500},
-	Keywords = {Yang, DataModels},
-	Lastchecked = {2020-01-02},
-	Month = {01},
-	Url = {http://www.openconfig.net/projects/models/},
-	Year = {2020},
-	Bdsk-Url-1 = {http://www.openconfig.net/projects/models/}}
+@manual{Openconfig,
+	Url = "http://www.openconfig.net/projects/models/",
+	Author = {OpenConfig},
+	Title = "OpenConfig",
+	Year = "2020 (accessed May 26, 2020)" }}
 
 @techreport{uni-topo,
 	Author = {O, Gonzalez de Dios and S. Barguil and Q. Wu and M. Boucadair},
