Updates from Overleaf

--- a/SDTN_Networks_v2.tex
+++ b/SDTN_Networks_v2.tex
@@ -820,17 +820,16 @@ Jutta Kemppainen received her Master of Science (Tech.) in 1999 from Helsinki Un
 \endbio
 
 \bio{figs/arturomayoral.png}
-
+Arturo Mayoral Lopez de Lerma received his PhD and MsC with honors form Universitat Politecnica de Catalunya (2019).He started his professional career in Telefonica I+D (2012) as a research student. Recently (September 2013) he started to work as a software developer and research assistant in the Centre Tecnologic de Telecomunicacions de Catalunya collaborating within the ICT-STRAUSS European Project.
 \endbio
 
-\bio{}
-Oscar Gonzalez de Dios received his PhD with honors form U. of Valladolid (2012) and his MS in Telecommunications Engineering also from U. of Valladolid (2000). He has 14 years of experience in Telefonica I+D, where he has been involved in numerous R&D European projects (recently STRONGEST, ONE, IDEALIST). He has coordinated the BANITS 2 project and acted as WP leader in others. He has co-authored more than 40 research papers and is currently active in IETF CCAMP and PCE WGs, as well as ITUT Study group 15. His main research interests include Photonic Networks, Flexi-grid, Inter-domain Routing, PCE, OBS, automatic network configuration, End To End MPLS, TCP performance and SDN.
+\bio{figs/ogondio.png}
+Oscar Gonzalez de Dios received his PhD with honors form U. of Valladolid (2012) and his MS in Telecommunications Engineering also from U. of Valladolid (2000). He has 14 years of experience in Telefonica I+D, where he has been involved in numerous R\&D European projects (recently STRONGEST, ONE, IDEALIST). He has coordinated the BANITS 2 project and acted as WP leader in others. He has co-authored more than 40 research papers and is currently active in IETF CCAMP and PCE WGs, as well as ITUT Study group 15. His main research interests include Photonic Networks, Flexi-grid, Inter-domain Routing, PCE, OBS, automatic network configuration, End To End MPLS, TCP performance and SDN.
 \endbio
 
-\bio{}
+\bio{figs/juan_pedro.png}
 Juan Pedro Fernandez-Palacios received the MS in Telecommunications Engineering from Polytechnic University of Valencia in 2000. In Sept. of 2000 he joined Telefonica I+D where he is currently leading the Core Network Evolution unit. He has been involved in several European projects such as NOBEL, NOBEL-2, STRONGEST and MAINS as well as in the design of core network architectures in the Telefonica Group. Currently he is coordinating the FP7 project IDEALIST as well as the standardization activities within CAON cluster, where he is acting as co-chair.
 \endbio
-
 
 \bio{figs/natalia_maya.png}
 Natalia Isabel Maya Perfetti is an Electronics and Telecommunications engineer graduated from Universidad del Cauca, Colombia back in 2018; thence, she has been working as a network planning engineer in Infinera Colombia where she supports different tasks related to DWDM Network Planning. For the last year she has also been responsible for the testing of the SDTN solution in the field trial environment.
