Updates from Overleaf

--- a/SDTN_Networks_v2.tex
+++ b/SDTN_Networks_v2.tex
@@ -59,34 +59,34 @@
 \ead{samier.barguil@estudiante.uam.es}
 \cormark[1]
 
-\author[2]{Victor Lopez Alvarez}[bioid=4]
+\author[2]{Victor Lopez Alvarez}[bioid=2]
 \ead{victor.lopezalvarez@telefonica.com}
 
 \author[4]{Cristyan Manta-Caro}[bioid=2]
 \ead{cristyan.manta@wipro.com}
 
-\author[4]{Cristian Rosero-Carvajal}[bioid=3]
+\author[4]{Cristian Rosero-Carvajal}[bioid=10]
 \ead{cristian.carvajal@wipro.com}
 
-\author[2]{Arturo Mayoral Lopez De Lerma}[bioid=5]
+\author[2]{Arturo Mayoral Lopez De Lerma}[bioid=11]
 \ead{arturo.mayoral@telefonica.com}
 
-\author[2]{Oscar Gonzalez De Dios}[bioid=6]
+\author[2]{Oscar Gonzalez De Dios}[bioid=7]
 \ead{oscar.gonzalezdedios@telefonica.com}
 
-\author[3]{Edward Echeverry}[bioid=7]
+\author[3]{Edward Echeverry}[bioid=3]
 \ead{edward.echeverry@telefonica.com}
 
 \author[2]{Juan Pedro Fernandez-Palacios}[bioid=8]
 \ead{juanpedro.fernandez-palaciosgimenez@telefonica.com}
 
-\author[5]{Janne Karvonen}[bioid=10]
+\author[5]{Janne Karvonen}[bioid=4]
 \ead{jkarvonen@infinera.com}
 
-\author[5]{Jutta Kemppainen}[bioid=10]
+\author[5]{Jutta Kemppainen}[bioid=5]
 \ead{jkemppainen@infinera.com}
 
-\author[5]{Natalia Maya}[bioid=11]
+\author[5]{Natalia Maya}[bioid=9]
 \ead{nmaya@infinera.com}
 
 \address[1]{Universidad Autonoma de Madrid, Madrid, Spain}
@@ -820,15 +820,16 @@ Jutta Kemppainen received her Master of Science (Tech.) in 1999 from Helsinki Un
 \endbio
 
 \bio{figs/arturomayoral.png}
-Arturo Mayoral Lopez de Lerma received his PhD and MsC with honors form Universitat Politecnica de Catalunya (2019).He started his professional career in Telefonica I+D (2012) as a research student. Recently (September 2013) he started to work as a software developer and research assistant in the Centre Tecnologic de Telecomunicacions de Catalunya collaborating within the ICT-STRAUSS European Project.
+Arturo Mayoral López de Lerma is a Technology Expert in Transport Networks at the Global Systems \& Network department of Telefónica GCTIO. He received the Ph.D. degree in telecommunications engineering from the Universitat Politècnica de Catalunya (UPC) in 2019. His  research  interests  include  optical network design and Software Defined Networking (SDN). He is author or co-author on over 50+ journals and conference papers.
+He graduated in Telecommunications Engineering by the Universidad Autónoma de Madrid in 2013 and he started his professional career in 2012, as undergraduate researcher in Telefonica I+D (R\&D) where developed his Final Career’s Project, awarded with the Best Final Project Prize by the Official College of Telecommunication Engineers (COIT).
 \endbio
 
 \bio{figs/ogondio.png}
-Oscar Gonzalez de Dios received his PhD with honors form U. of Valladolid (2012) and his MS in Telecommunications Engineering also from U. of Valladolid (2000). He has 14 years of experience in Telefonica I+D, where he has been involved in numerous R\&D European projects (recently STRONGEST, ONE, IDEALIST). He has coordinated the BANITS 2 project and acted as WP leader in others. He has co-authored more than 40 research papers and is currently active in IETF CCAMP and PCE WGs, as well as ITUT Study group 15. His main research interests include Photonic Networks, Flexi-grid, Inter-domain Routing, PCE, OBS, automatic network configuration, End To End MPLS, TCP performance and SDN.
+Óscar González de Dios received his M.S. degree in telecommunications engineering and Ph.D. degree (Hons.) from the University of Valladolid, Spain. He has 19 years of experience in Telefonica I+D, where he has been involved in a number of European research and development projects (recently, STRONGEST, ONE, IDEALIST, and Metro-Haul). He has coauthored over 100 research papers and 10 IETF RFCs. He is currently the head of SDN Deployments for Transport Networks, Telefonica Global CTIO. His main research interests include photonic networks, flexi-grid, interdomain routing, PCE, automatic network configuration, end-to-end MPLS, performance of transport protocols, and SDN. He is currently active in several IETF Working Groups and is the Co-Chair of TIP CANDI WG.
 \endbio
 
 \bio{figs/juan_pedro.png}
-Juan Pedro Fernandez-Palacios received the MS in Telecommunications Engineering from Polytechnic University of Valencia in 2000. In Sept. of 2000 he joined Telefonica I+D where he is currently leading the Core Network Evolution unit. He has been involved in several European projects such as NOBEL, NOBEL-2, STRONGEST and MAINS as well as in the design of core network architectures in the Telefonica Group. Currently he is coordinating the FP7 project IDEALIST as well as the standardization activities within CAON cluster, where he is acting as co-chair.
+Juan Pedro Fernández-Palacios Giménez received the MS in Telecommunications Engineering from Polytechnic University of Valencia in 2000. In Sept. of 2000 he joined Telefonica I+D where his research activities where focused on the design of new data and control plane architectures for IP over optical networks. He is author of 6 patents filled in Europe and US and more than 70 publications in conferences and journals. He was coordinator of two European research projects on optical transport networks (MAINS and IDEALIST) between 2011 and 2014. In 2013 he joined the Telefonica Global CTO office as Head of Transport. In 2016, he also took this position in Telefonica-O2 Germany. Since June 2017 he is leading the Integrated Transport Centre, a global organization in Telefonica in charge of defining the strategic network planning and technology for IP, DWDM, MW and satellite networks
 \endbio
 
 \bio{figs/natalia_maya.png}
